# OpenB3

./: .gitignore  README.md
BeatrixCPP/: CMakeLists.txt
BeatrixCPP/Source/: beatrix.hpp  global_definitions.c  global_definitions.h  global_inst.h  main.cpp  main.h
BeatrixCPP/Source/config/: cfgParser.c  cfgParser.h
BeatrixCPP/Source/convolution/: convolution.h
BeatrixCPP/Source/memstream/: memstream.c  memstream.h
BeatrixCPP/Source/midi/: midi.c  midi.h  midi_aseq.h  midi_types.h  midnam.c
BeatrixCPP/Source/overdrive/: filterTools.c  filterTools.h  overdrive.h
BeatrixCPP/Source/program/: defaultpgm.h  pgmParser.c  pgmParser.h  program.c  program.h
BeatrixCPP/Source/reverb/: reverb.c  reverb.h
BeatrixCPP/Source/state/: state.c  state.h
BeatrixCPP/Source/tonegen/: tonegen.c  tonegen.h
BeatrixCPP/Source/vibrato/: vibrato.c  vibrato.h
BeatrixCPP/Source/whirl/: eqcomp.h  whirl.h
OpenB3JUCE/: CMakeLists.txt
OpenB3JUCE/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
